# Compyl

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  progress.md  turbo.json
.claude/: settings.json
.claude/agents/: agent-platform-engineer.md  ai-pipeline-engineer.md  annotation-sdk-engineer.md  db-foundation-engineer.md  design-system-engineer.md  figma-intelligence-engineer.md  foundation-engineer.md  landing-page-engineer.md  qa-playwright-engineer.md  reporter-ux-engineer.md  runtime-mapping-engineer.md  security-reviewer.md  triage-workspace-engineer.md  visual-critique-agent.md
.claude/hooks/: audit-config-change.sh  run-targeted-checks.sh  task-complete-gate.sh  teammate-idle-gate.sh
.github/workflows/: ci.yml
apps/api/: package.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/worker-ai/: package.json  pyproject.toml
apps/worker-ai/src/: __init__.py  health.py  jobs.py  server.py
apps/worker-ai/tests/: test_jobs.py
docs/: 00-program-charter.md  01-operating-model.md  02-workstreams-and-milestones.md  03-task-backlog.md  04-db-and-boundaries.md  05-ui-ux-system.md  06-validation-loops.md  07-agent-team-playbook.md  08-runtime-stack-resolution.md  09-risk-register.md  10-agent-happy-paths.md
tests/e2e/: package.json  playwright.config.ts  (+1 more)
validation/: README.md  api-and-schema.md  contracts.md  e2e-matrix.md  figma-diff.md  live-integration.md  mcp-cli.md  observability.md  reporter-ui.md  runtime-stack-resolution.md  security-hardening.md  triage-workspace.md  ui-rebrand.md
(+63 files in other folders)
