[project]
name = "reviewlayer-worker-ai"
version = "0.0.1"
description = "Compyl AI processing worker (Python/Claude API)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
